src/objects/ffps_accBalance__AccountBalanceSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffps_accBalance__BalanceFieldAPIName__c</fullName>
        <label>Balance Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__BalanceTriggerEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__BalanceUpdateTriggerEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Update Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_accBalance__CreditsArePositive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credits Are Positive</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Balance Settings</label>
</CustomObject>